--- a/frontend/locales/zh.json
+++ b/frontend/locales/zh.json
@@ -463,33 +463,18 @@
     "Shell": "命令行 API"
   },
   "page": {
-    "title": "IPCheck.ing - 查看我的 IP 地址 - 查询本机 IP 地址及归属地 - 查看 WebRTC 连接 IP - DNS 泄露检测 - 网速测试 - Jason Ng 阿禅开源作品",
+    "title": "IP.ITVM.NET  - 查看我的 IP 地址 - 查询本机 IP 地址及归属地 - 查看 WebRTC 连接 IP - DNS 泄露检测 - 网速测试 - Jason Ng 阿禅开源作品",
     "description": "好用和开源的全能 IP 工具箱。轻松查看你的 IP 地址，IP 信息，检查 DNS 泄露，检查 WebRTC 连接，测试网站可用性，查找 DNS 记录，查找 Whois 信息，测试全球延迟测试等。",
     "keywords": "我的IP,IP工具,我的IP,IP查询,DNS泄漏测试,WebRTC测试,网速测试,DNS查询,Whois查询, Ping测试, 隐私测试",
-    "footerLink": "https://github.com/jason5ng32/MyIP",
-    "copyRightName": "Originally from ",
-    "copyRightLink": "https://ipcheck.ing",
-    "copyRightLinkName": "IPCheck.ing"
+
   },
   "helpModal": {
     "Title": "快捷键"
   },
   "about": {
     "Title": "关于",
-    "product1": "IPCheck.ing 是一个免费的 IP 工具箱，可以帮助你查看自己的 IP 信息，检测网站的可用性，查看 DNS 出口信息，进行网速测试，全球延迟测试，MTR 测试等。",
-    "product2": "这是一个开源项目，你可以点击页面底部的 GitHub 图标查看源代码。",
-    "product3": "最早的时候，这是我的一个用来学习 Vue.js 和学习如何使用 ChatGPT 写代码的练手项目，后来在 GitHub 上获得的星星数量越来越多，于是我进行了大量的重构和添加了许多非常有用的功能，希望你会喜欢。",
-    "meTitle": "关于我",
-    "me1": "我的名字叫阿禅，通常在网上使用 Jason Ng 作为英文名，我并不是一个专业的程序员，但是我喜欢编程，我喜欢开源，我喜欢分享。",
-    "me2": "在大多数时候，我是一名产品经理、一名博客作者、一个摩托车骑士以及一名极客。",
-    "me3": "你可以在下面的链接里找到我更详细的介绍：",
-    "contactTitle": "联系我",
-    "contact": "如果你有任何问题或建议，请通过邮箱联系我： jason[AT]kenengba.com 。",
-    "personal": "个人网站",
-    "blog": "可能吧博客",
-    "retiremoney": "躺平计算器",
-    "twitter": "Twitter"
-  },
+    "product1": "IP.ITVM.NET 是一个免费的 IP 工具箱，可以帮助你查看自己的 IP 信息，检测网站的可用性，查看 DNS 出口信息，进行网速测试，全球延迟测试，MTR 测试等。",
+    },
   "specialthanks": {
     "Title": "特别鸣谢",
     "Note1": "这个项目之所以能够完成，少不了一些热心的人和组织的支持和帮助，以及给予灵感或开放的代码人们。非常感谢他们："
